--- a/report/report.tex
+++ b/report/report.tex
@@ -9,8 +9,8 @@
 \begin{document}
 
 % Template settings
-\title{KRAFTERS: \\A platform for distributed system testing}
-\providecommand{\autore}{Federici Marco, Bortoli Gianluca, Taneburgo Gianvito}
+\title{Testing Consensus Algorithms:\\a Black-box Approach}
+\providecommand{\autore}{Bortoli Gianluca, Federici Marco, Taneburgo Gianvito}
 \providecommand{\principaladviser}{Alberto Montresor}
 \providecommand{\annoacc}{2015-2016}
 
