--- a/report/sections/conclusion.tex
+++ b/report/sections/conclusion.tex
@@ -1,2 +1,7 @@
 %!TEX root=../report.tex
 \chapter{Conclusion}\label{chp:conclusion}
+
+Distributed algorithms are typically tested validating all the possible interactions between a set of nodes. This task is usually performed simulating different processes on local machines or by using different machines in a network. This phase typically requires many efforts, both for the wide range of scenarios produced by interleaving executions and for the difficulties in debugging remote machines. The testing approach proposed in this work is different since it directly manipulates the network underlying the system rather than acting on individual nodes. This solution allows the tester to model many different situations with little effort. The black-box approach suits this paradigm and such kind of tests can be easily performed using the developed platform. Even if network modifications affect the lower level message exchange, many useful insights on the upper application level logic can be inferred.
+For the purpose of this work, the platform has been used to test different implementations of Raft and Paxos consensus algorithms. The tests performed on Multi-paxos show it favours a distributed environment rather than a pseudo-distributed one. This is probably due to the CPU-intensive nature of this particular implementation. Furthermore, Multi-paxos is not performing failovers in an efficient way after a period of serious problems on the network.\\
+RethinkDB seems to be the overall winner, even though other implementations reach slightly better results in some tests. This may be due to internal optimizations, but investigating them is out of the scope of this work. The product proved to be very well implemented and very robust, being capable of performing disaster recovery in a small amount of time. Moreover, RethinkDB is highly customizable and this flexibility well suits different users’ requirements.\\
+Finally, as expected, commercial products turned out to be much better than their counterparts, especially from the safety point of view.
